Trying to stop font sizes changing all over the place on mobile

--- a/e621_gallery_finder/static/style.css
+++ b/e621_gallery_finder/static/style.css
@@ -1,3 +1,9 @@
+html,body {
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+}
 table, tr, th, td {
     border: 1px solid black;
     border-collapse: collapse;
